# agent-discogs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.github/workflows/: checks.yml  ci.yml  publish.yml
skills/agent-discogs/: SKILL.md
skills/agent-discogs/references/: commands.md  discogs-domain.md  pressings-guide.md  search-patterns.md
src/agent_discogs/: __init__.py  __main__.py  client.py  errors.py  formatting.py  json_output.py  pagination.py  refs.py
src/agent_discogs/commands/: cache.py  get.py  search.py  status.py
tests/: test_cli.py  test_client.py  test_errors.py  test_formatting.py  test_pagination.py  test_refs.py
